Add itemstack localization